<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/skip"
        android:textColor="@color/skipColor"
        android:textSize="16sp"
        android:theme="@style/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/on_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/dotOne"
            android:layout_width="26dp"
            android:layout_height="4dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="56dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dotTwo"
            android:layout_width="26dp"
            android:layout_height="4dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/dotsColor"
            app:cardCornerRadius="56dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dotThree"
            android:layout_width="26dp"
            android:layout_height="4dp"
            android:backgroundTint="@color/dotsColor"
            app:cardCornerRadius="56dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/titleOn1"
        android:textSize="32sp"
        android:theme="@style/textView" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/subTitleOn1"
        android:textSize="16sp"
        android:theme="@style/textView" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/nextColor"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>